MDEV-28912   NON-UNIQUE FTS_DOC_ID index mistaken as FTS_DOC_ID_INDEX

- InnoDB mistakenly identifies the non-unique FTS_DOC_ID index as
FTS_DOC_ID_INDEX while loading the table. dict_load_indexes()
should check whether the index is unique before assigning
fts_doc_id_index